--- a/style.css
+++ b/style.css
@@ -183,9 +183,9 @@ body {
     color: white;
     border-radius: 50%;
     padding: 10px;
-    width: 50px;
-    height: 50px;
-    text-align: center;
+    width: 40px;
+    height: 40px;
+    line-height: 0.5rem;
     font-size: 1.5em;
     position: relative;
     margin: 0;
