--- a/style.css
+++ b/style.css
@@ -554,7 +554,12 @@ body {
 .closest-log {
     font-weight: bold;
 }
-
+#timePickerClearButton {
+    font-size: 1.5rem;
+    padding: 10px 20px;
+    background-color: #dc3545;
+    color: white;
+}
 @media (max-width: 800px) {
     .time-display {
         border-top: none;
@@ -591,6 +596,15 @@ body {
         width: 100%;
     }
     .alarm-settings label {
+        font-size: 1rem;
+    }
+    .clock {
+        margin-bottom: 0;
+    }
+    .time-input{
+        margin: 20px 0 10px;
+    }
+    #timePickerOkButton,#timePickerClearButton {
         font-size: 1rem;
     }
 }
