--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ body {
     color: #555;
     width: 50px;
     text-align: right;
+    cursor: pointer;
 }
 
 .log-button-container {
@@ -417,7 +418,7 @@ body {
     height: 150px;
     border: 5px solid #333;
     border-radius: 50%;
-    margin: 0 auto 20px auto;
+    margin: 0 auto;
     background-color: #fff;
     rotate: 90deg;
 }
@@ -430,6 +431,25 @@ body {
     background-color: #333;
     top: 50%;
     transform-origin: 100%;
+    transform: rotate(90deg);
+}
+.clock .hour-hand {
+    width: 35%; /* 針の長さ */
+    height: 2px;
+    background-color: #333;
+    top: 50%;
+    left: 50%;
+    transform-origin: 0 0; /* 針の根元を基準に回転させる */
+    transform: rotate(90deg);
+}
+
+.clock .minute-hand {
+    width: 50%; /* 分針の長さ */
+    height: 1px;
+    background-color: #666;
+    top: 50%;
+    left: 50%;
+    transform-origin: 0 0; /* 針の根元を基準に回転 */
     transform: rotate(90deg);
 }
 
@@ -560,6 +580,11 @@ body {
     background-color: #dc3545;
     color: white;
 }
+.disabled-log-btn {
+    background-color: gray;
+    color: rgba(0, 0, 0, 0.2);
+    cursor: no-drop;
+}
 @media (max-width: 800px) {
     .time-display {
         border-top: none;
@@ -601,10 +626,16 @@ body {
     .clock {
         margin-bottom: 0;
     }
-    .time-input{
+    .time-input {
         margin: 20px 0 10px;
+        padding: 5px;
     }
-    #timePickerOkButton,#timePickerClearButton {
+    #timePickerOkButton,
+    #timePickerClearButton {
         font-size: 1rem;
+    }
+    .clock {
+        width: 100px;
+        height: 100px;
     }
 }
