アンドゥや登録処理のリファクタ ボタンを無効にする機能のバグ修正

--- a/style.css
+++ b/style.css
@@ -631,7 +631,8 @@ body {
         padding: 5px;
     }
     #timePickerOkButton,
-    #timePickerClearButton {
+    #timePickerClearButton,
+    #channelToggleButton {
         font-size: 1rem;
     }
     .clock {
