--- a/style.css
+++ b/style.css
@@ -585,6 +585,31 @@ body {
     color: rgba(0, 0, 0, 0.2);
     cursor: no-drop;
 }
+
+/* モーダルの閉じるボタンの共通スタイル */
+.modal-close-btn {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    background-color: #ccc;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 10px;
+    right: 15px;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+    color: #000;
+  }
+  
+  /* ホバー時のスタイル */
+  .modal-close-btn:hover {
+    color: #f00;  /* ホバー時は赤にする */
+  }
 @media (max-width: 800px) {
     .time-display {
         border-top: none;
