--- a/style.css
+++ b/style.css
@@ -633,7 +633,7 @@ body {
         font-size: 1.1rem;
     }
     .btn {
-        padding: 10px;
+        padding: 7px;
     }
     .area-tile {
         min-width: 140px;
@@ -664,5 +664,8 @@ body {
     .clock {
         width: 100px;
         height: 100px;
+    }
+    .header .title {
+        font-size: 0.8rem;
     }
 }
