--- a/style.css
+++ b/style.css
@@ -149,7 +149,6 @@ body {
     flex: 1;
     min-width: 150px;
     overflow: hidden;
-    
 }
 
 .area-title {
@@ -164,7 +163,9 @@ body {
     width: calc(100% + 30px);
     box-sizing: border-box;
     border-radius: 5px 5px 0 0;
-    box-shadow: inset 0 1px 0px,0 0.5px 0px #a0a0a0;
+    box-shadow:
+        inset 0 1px 0px,
+        0 0.5px 0px #a0a0a0;
 }
 
 .terraguard .area-title {
@@ -194,7 +195,6 @@ body {
     background-color: #666;
     color: white;
     border-radius: 50%;
-    padding: 10px;
     width: 35px;
     height: 35px;
     line-height: 0.5rem;
@@ -677,10 +677,11 @@ body {
     }
     .confirm-btn,
     .back-btn {
-        width: 30px;
-        height: 30px;
+        width: 25px;
+        height: 25px;
         line-height: 0.5rem;
         font-size: 0.8em;
+        padding: 0;
     }
     .header-btn {
         font-size: 1.2rem;
