--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ body {
 }
 
 .area-title {
+    cursor: pointer;
     font-size: 1rem;
     margin-bottom: 0;
     padding: 6px;
@@ -166,6 +167,16 @@ body {
     box-shadow:
         inset 0 1px 0px,
         0 0.5px 0px #a0a0a0;
+}
+
+.area-title::after {
+    position: absolute;
+    content: "edit";
+    color: #8b8b8b;
+    /* display: block; */
+    font-size: 0.5rem;
+    line-height: 1rem;
+    top: 0.5rem;
 }
 
 .terraguard .area-title {
@@ -275,7 +286,7 @@ body {
     visibility: visible;
     opacity: 1;
 }
-
+/* モーダルの共通スタイル */
 .modal {
     display: none;
     position: fixed;
@@ -302,21 +313,13 @@ body {
     animation: modalContentFadeIn 0.3s forwards;
 }
 
+/* アニメーション */
 @keyframes modalFadeInBackground {
     from {
         opacity: 0;
     }
     to {
         opacity: 1;
-    }
-}
-
-@keyframes modalFadeOutBackground {
-    from {
-        opacity: 1;
-    }
-    to {
-        opacity: 0;
     }
 }
 
@@ -331,47 +334,21 @@ body {
     }
 }
 
-@keyframes modalContentFadeOut {
-    from {
-        opacity: 1;
-        transform: scale(1);
-    }
-    to {
-        opacity: 0;
-        transform: scale(0.9);
-    }
+/* 入力ボックスのスタイル */
+.time-input {
+    width: 100%;
+    font-size: 1.5rem;
+    padding: 10px;
+    margin: 20px 0;
+    box-sizing: border-box;
+    text-align: center;
 }
 
-.modal-close-btn {
-    position: absolute;
-    top: -15px;
-    right: -15px;
-    width: 30px;
-    height: 30px;
-    background-color: #ccc;
-    border-radius: 50%;
-    cursor: pointer;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.modal-close-btn::before,
-.modal-close-btn::after {
-    content: "";
-    position: absolute;
-    width: 60%;
-    height: 2px;
-    background-color: #333;
-}
-
-.modal-close-btn::before {
-    transform: rotate(45deg);
-}
-
-.modal-close-btn::after {
-    transform: rotate(-45deg);
+/* ボタンのスタイル */
+.btn {
+    font-size: 1.5rem;
+    padding: 10px 20px;
+    margin: 5px;
 }
 
 #modalList {
@@ -595,6 +572,8 @@ body {
 /* モーダルの閉じるボタンの共通スタイル */
 .modal-close-btn {
     position: absolute;
+    top: -15px; /* 位置を調整 */
+    right: -15px;
     width: 30px;
     height: 30px;
     background-color: #ccc;
@@ -604,12 +583,24 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    top: 10px;
-    right: 15px;
     border: none;
-    font-size: 24px;
-    cursor: pointer;
-    color: #000;
+}
+
+.modal-close-btn::before,
+.modal-close-btn::after {
+    content: "";
+    position: absolute;
+    width: 60%;
+    height: 2px;
+    background-color: #333;
+}
+
+.modal-close-btn::before {
+    transform: rotate(45deg);
+}
+
+.modal-close-btn::after {
+    transform: rotate(-45deg);
 }
 
 @media (max-width: 800px) {
@@ -663,10 +654,8 @@ body {
         margin: 20px 0 10px;
         padding: 5px;
     }
-    #timePickerOkButton,
-    #timePickerClearButton,
-    #channelToggleButton {
-        font-size: 1rem;
+    .btn {
+        font-size: 1rem !important;
     }
     .clock {
         width: 100px;
