--- a/style.css
+++ b/style.css
@@ -90,15 +90,16 @@ body {
 
 .btn {
     width: 100%;
-    padding: 15px;
+    padding: 10px 20px;
     font-size: 1.2em;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
+    margin: 5px 0;
 }
+
 .modal-content .btn {
-    margin-bottom: 10px;
 }
 
 .log-row {
@@ -106,7 +107,6 @@ body {
     width: 100%;
     justify-content: center;
     align-items: center;
-    margin-bottom: 10px;
 }
 
 .log-label {
@@ -127,6 +127,7 @@ body {
     color: white;
     font-size: 1.2em;
     width: 100%;
+    text-shadow: 0px 0px 3px #000cff;
 }
 .log-container {
     max-width: 600px;
@@ -154,7 +155,7 @@ body {
 .area-title {
     cursor: pointer;
     font-size: 1rem;
-    margin-bottom: 0;
+    margin-bottom: -5px;
     padding: 6px;
     color: white;
     text-align: center;
@@ -171,12 +172,12 @@ body {
 
 .area-title::after {
     position: absolute;
-    content: "edit";
-    color: #8b8b8b;
-    /* display: block; */
+    content: "\f013";
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
     font-size: 0.5rem;
-    line-height: 1rem;
-    top: 0.5rem;
+    top: 1rem;
+    padding-left: 5px;
 }
 
 .terraguard .area-title {
@@ -344,13 +345,6 @@ body {
     text-align: center;
 }
 
-/* ボタンのスタイル */
-.btn {
-    font-size: 1.5rem;
-    padding: 10px 20px;
-    margin: 5px;
-}
-
 #modalList {
     list-style: none;
     padding: 0;
@@ -379,7 +373,7 @@ body {
 .time-display {
     font-size: 0.8rem;
     text-wrap: nowrap;
-    color: #0000ff;
+    color: #808080;
     text-align: center;
     margin-top: 5px;
     margin-top: -5px;
@@ -467,6 +461,7 @@ body {
     font-size: 1.5rem;
     cursor: pointer;
     transition: transform 0.2s ease;
+    color: #666;
 }
 
 .header-btn:hover {
@@ -525,6 +520,7 @@ body {
 
 /* アラーム設定のスタイル */
 .alarm-settings {
+    display: none !important;
     padding: 10px;
     background-color: #f9f9f9;
     border-radius: 8px;
@@ -565,8 +561,9 @@ body {
 }
 .disabled-log-btn {
     background-color: gray;
-    color: rgba(0, 0, 0, 0.2);
+    color: rgba(0, 0, 0);
     cursor: no-drop;
+    text-shadow: none;
 }
 
 /* モーダルの閉じるボタンの共通スタイル */
@@ -603,7 +600,7 @@ body {
     transform: rotate(-45deg);
 }
 
-@media (max-width: 800px) {
+@media (max-width: 845px) {
     .container {
         margin-top: 35px;
     }
@@ -630,10 +627,11 @@ body {
         font-size: 1.1rem;
     }
     .btn {
-        padding: 7px;
+        margin: 0;
+        padding: 10px;
     }
     .area-tile {
-        min-width: 130px;
+        min-width: 135px;
         padding: 10px;
     }
     .area-container {
@@ -677,6 +675,9 @@ body {
     }
     .header {
         padding: 5px;
+    }
+    .log-label {
+        padding-right: 5px;
     }
 }
 .log-row:last-child {
