--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ body {
     background-color: #ffffff;
     border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 15px;
+    padding: 0 15px 15px;
     flex: 1;
     min-width: 150px;
     overflow: hidden;
@@ -155,19 +155,17 @@ body {
 .area-title {
     cursor: pointer;
     font-size: 1rem;
-    margin-bottom: -5px;
     padding: 6px;
-    color: white;
     text-align: center;
     position: relative;
-    left: -15px;
-    top: -15px;
-    width: calc(100% + 30px);
-    box-sizing: border-box;
+    margin-left: -15px;
+    margin-right: -15px;
     border-radius: 5px 5px 0 0;
     box-shadow:
         inset 0 1px 0px,
         0 0.5px 0px #a0a0a0;
+    box-sizing: border-box;
+    margin-bottom: 10px;
 }
 
 .area-title::after {
@@ -607,15 +605,17 @@ body {
     .area-title {
         font-size: 1rem;
         position: relative;
-        left: -10px;
-        right: -10px;
-        top: -10px;
-        width: calc(100% + 20px);
+        margin-left: -10px;
+        margin-right: -10px;
         border-radius: 5px 5px 0 0;
         margin-bottom: -3px;
         box-shadow: inset 0px 2px 2px -2px;
         padding: 3px 0 4px 0;
         box-sizing: border-box;
+        margin-bottom: 10px;
+    }
+    .area-title::after {
+        top: 0.7rem;
     }
     .log-btn {
         font-size: 1rem;
@@ -632,7 +632,7 @@ body {
     }
     .area-tile {
         min-width: 135px;
-        padding: 10px;
+        padding: 0 10px 10px 10px;
     }
     .area-container {
         gap: 5px;
