--- a/style.css
+++ b/style.css
@@ -684,6 +684,9 @@ body {
     #noteCard {
         padding: 10px;
     }
+    .save-btn, .copy-btn, #confirmYesButton {
+        margin-bottom: 10px;
+    }
 }
 
 .log-row:last-child {
