ノートに時刻を表示しないモードを追加

--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ body {
     border-radius: 5px 5px 0 0;
     box-shadow:
         inset 0 1px 0px,
-        0 0.5px 0px #a0a0a0;
+        0 0.5px 0px #35353547;
     box-sizing: border-box;
     margin-bottom: 10px;
 }
@@ -182,17 +182,17 @@ body {
 }
 
 .turia .area-title {
-    color: palevioletred;
+    color: #c60041;
     background-color: #ffd1d1;
 }
 
 .angelos .area-title {
-    color: coral;
+    color: #882500;
     background-color: #ffe4cc;
 }
 
 .fontunas .area-title {
-    color: blueviolet;
+    color: #40007c;
     background-color: #f0e5ff;
 }
 .back-btn {
@@ -598,6 +598,7 @@ body {
 #noteCard {
     padding: 15px;
 }
+
 @media (max-width: 845px) {
     .container {
         margin-top: 35px;
@@ -684,8 +685,15 @@ body {
     }
     .save-btn,
     .copy-btn,
-    #confirmYesButton {
+    #confirmYesButton,
+    #timePickerOkButton,
+    #timePickerClearButton {
         margin-bottom: 10px;
+    }
+}
+@media (max-width: 400px) {
+    .title {
+        color: transparent;
     }
 }
 
@@ -698,5 +706,25 @@ body {
     border-bottom: 1px dashed #9a9a9a;
     padding: 0;
     margin: 5px 0;
+}
+#noteCard {
+    position: relative;
+    padding-bottom: 45px;
+}
+
+#toggleTimeDisplay {
+    color: #666;
+    cursor: pointer;
+    position: absolute;
+    display: block;
+    bottom: 15px;
+    left: 15px;
+    text-align: left;
+}
+
+.note-wrapper{
+    display: flex;
+    position: relative;
+    flex: 1;
 }
 
